--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "RobMixReg"]
+	path = RobMixReg
+	url = https://github.com/changwn/robmixreg
+	shallow = true
+	registered = true
